# mac-meeting-transcriber

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
src/mac_meeting_transcriber/: __init__.py  __main__.py  audio.py  cache.py  diarize.py  formatter.py  identify.py  merge.py  models.py  polish.py  transcribe.py
tests/: test_cache.py  test_formatter.py  test_identify.py  test_main.py  test_merge.py  test_models.py  test_ping.py  test_polish.py  test_transcribe.py
